--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script type="text/Javascript">
   // $('h1 + h2').addClass('selected'); // selects only h2's that are immediately following and h1
   // $('h1').siblings('h2, h3, p').addClass('selected'); // selects all siblings that are filtered in the parameter
-  $('li.selected').nextAll('li').addClass('js-selected');
+  $('li.selected').nextAll('li').addClass('js-selected'); // selects all siblings, can accept a filter, otherwise selects all siblings
 </script>
 </body>
 </html>
